k8s/wms-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: wms-gateway
  namespace: wms
spec:
  gatewayClassName: wms-gateway-class
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same

    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-wms-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Same
